# luchtransportes

./: .env.example  Dockerfile  README.md  conftest.py  docker-compose.yml  manage.py  pyproject.toml
.github/workflows/: CI.yml
backend/: conftest.py  settings.py  urls.py
backend/accounts/: admin.py  conftest.py  forms.py  models.py  services.py  urls.py  views.py
backend/accounts/migrations/: 0001_initial.py  0002_user_cargo.py  0003_remove_user_cargo.py
backend/accounts/templates/accounts/: user_detail.html  user_form.html  user_list.html
backend/accounts/templates/accounts/includes/: navigation_buttonsold.html  search.html
backend/accounts/templates/registration/: login.html  password_reset_confirm.html  registration_form.html
backend/accounts/tests/: factories.py  test_users.py
backend/core/: urls.py  views.py
backend/core/static/css/: app.css
backend/core/static/js/: app.bundle.js  frete.js
backend/core/templates/: base.html  dashboard.html  index.html
backend/core/templates/core/: base.html  base_login.html  dashboard.html  dashboardnew.html  dashboardold.html  index.html
backend/core/templates/core/includes/: aside.html  breadcrumb.html  footer.html  nav.html  navigation_buttons.html  pagination.html
backend/core/templates/includes/: aside.html  footer.html
backend/docs/: queryset.md
backend/driver/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
backend/driver/migrations/: 0001_initial.py  0002_alter_driver_options.py  0002_rename_user_driver_nome.py  0003_alter_driver_options_remove_driver_email_and_more.py
backend/driver/templates/driver/: driver_form.html  driver_list.html
backend/driver/templates/driver/includes/: breadcrumb.old  (+1 more)
backend/freight/: admin.py  apps.py  filters.py  forms.py  models.py  urls.py  views.py
backend/freight/migrations/: 0001_initial.py  0002_alter_freight_options_alter_freight_caminhao.py  0002_freight_km_destino_freight_km_origem.py  0003_alter_freight_frete_adiant_valor_and_more.py  0003_alter_freight_options_alter_freight_caminhao.py  0004_alter_freight_frete_adiant_valor_and_more.py  0004_freight_distancia.py  0005_freightfee.py
backend/freight/templates/freight/: freight_detail.html  freight_form.html  freight_list.html  freightfee_form.html  freightfee_list.html
backend/tests/: test_driver.old  test_driver.py  test_initial.py  test_user.py
backend/truck/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
backend/truck/migrations/: 0001_initial.py  0002_truckfees.py  0003_delete_truckfees.py  0004_alter_truck_options_truckflue.py  0005_truckflue_litros.py  0006_alter_truckflue_litros.py  0007_alter_truck_options_alter_truckflue_options_and_more.py  0008_truckflue_descricao.py  0009_truckrepair.py  0010_truckflue_cidade.py  0011_alter_truckflue_cidade.py
backend/truck/templates/truck/: truck_form.html  truck_list.html  truckfees_list.html  truckflue_detail.html  truckflue_form.html  truckflue_list.html  truckrepair_detail.html  truckrepair_form.html  truckrepair_list.html
(+3 files in other folders)
