[tool.poetry]
name = "luchtransportes"
version = "0.1.0"
description = ""
authors = ["Jorge Luiz Plautz <jorge.plautz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "4.1.7"
python-decouple = "^3.8"
django-extensions = "^3.2.1"
django-widget-tweaks = "^1.4.12"
psycopg2-binary = "^2.9.6"
dj-database-url = "^2.0.0"
gunicorn = "20.1.0"
six = "^1.16.0"
chartkick = "^1.0.1"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.0.0"
blue = "^0.9.1"
isort = "^5.12.0"
taskipy = "^1.10.4"
pytest-django = "^4.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "backend.settings"

python_files = [
    "test*.py",
    "*tests.py",
]
minversion = "6.0"
addopts = "-ra -q -v -p no:warnings"

[tool.isort]
profile = "black"
line_length = 79

[tool.taskipy.tasks]
lint = "blue --check --diff . && isort --check --diff ."
pre_test = "task lint"
test = "pytest -s -x --cov=backend -vv"
post_test = "coverage html"